Report: Fixed page box header alignment

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -2576,7 +2576,7 @@ h6 {
   height: 100%;
   margin-top: 20px; }
 .page-box .page-box-header {
-  padding: 14px 10px; }
+  padding: 14px 0; }
 .page-box .page-box-header h6 {
   color: #454545; }
 .page-box .page-box-header span {
